# rust-cli-template

./: Cargo.toml
crates/cli/: cli.rs  main.rs
