[package]
name = "rust-cli-template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli-template"
path = "crates/cli/main.rs"

[workspace]
members = []

[profile.release]
debug = false

[profile.release-lto]
inherits = "release"
opt-level = 3
strip = "symbols"
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
directories = "5.0.1"
human-panic = "2.0.2"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "registry",
  "serde",
  "serde_json",
] }
